Small consent-container spacing fix

--- a/assets/scss/modules/leads-form.scss
+++ b/assets/scss/modules/leads-form.scss
@@ -470,8 +470,7 @@
                 .checkbox-container {
                     grid-column: 1/4;
                     grid-row: 3/4;
-                    margin: 0;
-                    margin-top: 1rem;
+                    margin: 0.5rem 0 1.5rem 0;
                 }
                 small {
                     grid-column: 1/4;
